--- a/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
@@ -372,6 +372,36 @@
     "\n",
     "Therefore the correct answer is E."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 40\n",
+    "Consider the following recursive method.\n",
+    "\n",
+    "![40](https://assets.learnosity.com/organisations/537/media.academicmerit.com/002673dc81c296f0f64de524352d075f/original.jpg)\n",
+    "\n",
+    "A. WATC, WAT, WA, W\n",
+    "\n",
+    "B. WATCH, WATC, WAT, WA\n",
+    "\n",
+    "C. W, WA, WAT, WATC\n",
+    "\n",
+    "D. W, WA, WAT, WATC, WATCH\n",
+    "\n",
+    "E. WATCH, WATC, WAT, WA, W, WA, WAT, WATC, WATCH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correction\n",
+    "I misclicked again 😭\n",
+    "\n",
+    "C is correct over D because for `temp`, the substring only goes from 0 to len - 1, meaning that it will exclude the last element."
+   ]
   }
  ],
  "metadata": {
