added units that i got wrong

--- a/_notebooks/Foundation/_tangibles/2024-11-08-spring_3_objectives.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-11-08-spring_3_objectives.ipynb
@@ -25,7 +25,7 @@
     "## N@TM Quick Summary\n",
     "- Night at the Museum was fun! Many students and even parents showed interest in our bathroom pass project.\n",
     "- A handful of parents were software engineers, so we could explain the project in depth and what we did, such as the spring framework and many to many relationships in the database. \n",
-    "![N@TM](https://files.catbox.moe/5lpcvn.jpg)"
+    "![natm](https://github.com/user-attachments/assets/92fd0475-cab1-42ba-bf45-6cb80881cd58)"
    ]
   },
   {
@@ -62,16 +62,96 @@
     "![Flowchart](https://github.com/user-attachments/assets/90837018-b218-4f53-8d23-11e4fd2231e0)\n",
     "\n",
     "- I also decided to make a Canva design for my individual feature\n",
-    "![Canva](https://github.com/user-attachments/assets/21dd23b1-9257-4646-85e4-de772e1f3668)"
+    "![Canva](https://github.com/user-attachments/assets/21dd23b1-9257-4646-85e4-de772e1f3668)\n",
+    "\n",
+    "The flowchart was altered several times during our sprint and was changed based on adjustments to our features. Mr. Mortensen's feedback was quite helpful to guide our project more toward analytics and we changed our plans accordingly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "## Feature Overview\n",
+    "![Feature](https://github.com/user-attachments/assets/2acc7574-bde3-4056-b5f4-8d7ecf4d5726)\n",
+    "![Database](https://github.com/user-attachments/assets/7136982f-57ef-4550-9dd2-75488652e5eb)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Overview\n",
-    "![Feature](https://github.com/user-attachments/assets/2acc7574-bde3-4056-b5f4-8d7ecf4d5726)\n",
-    "![Database](https://github.com/user-attachments/assets/7136982f-57ef-4550-9dd2-75488652e5eb)\n"
+    "## How it works\n",
+    "At Del Norte, almost all teachers only want one student in their class to be in the bathroom at a time to prevent students from fooling around. That's where my bathroom queue comes in."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I was especially proud of this code that I made to add students to queue. I had to understand how data transfer objects work while also gaining familiarity with the lombok annotations for getters and setters.\n",
+    "\n",
+    "```java\n",
+    "@RequestMapping(\"/api/queue\")\n",
+    "public class QueueApiController {\n",
+    "\n",
+    "    @Autowired\n",
+    "    private QueueJPARepository repository;\n",
+    "\n",
+    "    // DTO class for queue entries\n",
+    "    @Getter\n",
+    "    public static class QueueDto {\n",
+    "        private String teacherName;\n",
+    "        private String studentName;\n",
+    "    }\n",
+    "\n",
+    "    @PostMapping(\"/add\")\n",
+    "    public ResponseEntity<Object> addToQueue(@RequestBody QueueDto queueDto) {\n",
+    "        // Check if a queue entry for the teacher already exists\n",
+    "        Optional<BathroomQueue> existingQueue = repository.findByTeacherName(queueDto.getTeacherName());\n",
+    "        if (existingQueue.isPresent()) {\n",
+    "            existingQueue.get().addStudent(queueDto.getStudentName());\n",
+    "            repository.save(existingQueue.get());\n",
+    "        }\n",
+    "        else {\n",
+    "            BathroomQueue newQueue = new BathroomQueue(queueDto.getTeacherName(), queueDto.getStudentName());\n",
+    "            repository.save(newQueue);\n",
+    "        }\n",
+    "        return new ResponseEntity<>(queueDto.getStudentName() + \" was added to \" + queueDto.getTeacherName(), HttpStatus.CREATED);\n",
+    "    }\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LIVE CODE DEMONSTRATION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checklist format for Mr. Mortensen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| **Assignment**                | **Points**    | **Grade** | **Evidence** |\n",
+    "|-------------------------------|---------------|-----------|--------------|\n",
+    "| Sprint 1-3 Review Ticket      | 3             |           |<a href=\"https://github.com/trevorhuang1/csa_blog/issues/7\">Sprint 1</a>, <a href=\"https://github.com/trevorhuang1/csa_blog/issues/10\">Sprint 2</a>              |\n",
+    "| Sprint 3 Team Issue(s)/Plan   | 2             |           |![Flowchart](https://github.com/user-attachments/assets/90837018-b218-4f53-8d23-11e4fd2231e0), ![Canva](https://github.com/user-attachments/assets/21dd23b1-9257-4646-85e4-de772e1f3668)              |\n",
+    "| Beginning-2-End Contribution  | 2             |           |              |\n",
+    "| N@tM Team Presentation        | 2             |           |              |\n",
+    "| Live Review Indi Demo         | 1             |           |              |\n",
+    "| **Total**                     | 10            |           |              |"
    ]
   }
  ],
