--- a/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
@@ -32,6 +32,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Question 4: 2B\n",
+    "Question 10: 4A\n",
+    "Question 11: 1B\n",
+    "Question 15: 1B\n",
+    "Question 16: 1B\n",
+    "Question 18: 1C\n",
+    "Question 22: 5B\n",
+    "Question 23: 2C\n",
+    "Question 30: 2C\n",
+    "Question 35: 2B\n",
+    "Question 40: 2C\n",
+    "\n",
+    "I don't even need to total each section to see how my main struggles were with unit 1 (primitive types) and unit 2 (using objects). I think that being more surgical and precise while doing targetted practice for these units will help with my future score.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 4\n",
     "![4](https://assets.learnosity.com/organisations/537/media.academicmerit.com/9030876d3f339beb4985ad70e46c4d62/original.jpg)\n",
     "\n",
@@ -278,9 +297,11 @@
    "source": [
     "### Question 23\n",
     "Consider the following instance variable and method.\n",
+    "\n",
     "![23A](https://assets.learnosity.com/organisations/537/media.academicmerit.com/ed033b294ad1d99eb6ae4e37a1fe3cc9/original.jpg)\n",
     "\n",
     "Assume that animals has been instantiated and initialized with the following contents.\n",
+    "\n",
     "![23B](https://assets.learnosity.com/organisations/537/media.academicmerit.com/2c59528130e496723cdbff5078e2f116/original.jpg)\n",
     "\n",
     "What will the contents of animals be as a result of calling manipulate?\n",
