--- a/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-11-18-2014_mcq_corrections.ipynb
@@ -32,17 +32,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 4: 2B\n",
-    "Question 10: 4A\n",
-    "Question 11: 1B\n",
-    "Question 15: 1B\n",
-    "Question 16: 1B\n",
-    "Question 18: 1C\n",
-    "Question 22: 5B\n",
-    "Question 23: 2C\n",
-    "Question 30: 2C\n",
-    "Question 35: 2B\n",
-    "Question 40: 2C\n",
+    "- Question 4: 2B\n",
+    "- Question 10: 4A\n",
+    "- Question 11: 1B\n",
+    "- Question 15: 1B\n",
+    "- Question 16: 1B\n",
+    "- Question 18: 1C\n",
+    "- Question 22: 5B\n",
+    "- Question 23: 2C\n",
+    "- Question 30: 2C\n",
+    "- Question 35: 2B\n",
+    "- Question 40: 2C\n",
     "\n",
     "I don't even need to total each section to see how my main struggles were with unit 1 (primitive types) and unit 2 (using objects). I think that being more surgical and precise while doing targetted practice for these units will help with my future score.\n"
    ]
