git hub commit message

--- a/_notebooks/Foundation/_tangibles/2024-11-08-spring_3_objectives.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-11-08-spring_3_objectives.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I was especially proud of this code that I made to add students to queue. I had to understand how data transfer objects work while also gaining familiarity with the lombok annotations for getters and setters.\n",
+    "I was especially proud of this [code](https://github.com/CSA-Coders-2025/CSA_Combined_Backend_Fork/commit/cdcc150ab10727f6591f1c5928097f12c3224531#diff-7d5c7a9f8408156aa08776bece5691941b1df5a07b2a0ab42f762fa378e304f0) that I made to add students to queue. I had to understand how data transfer objects work while also gaining familiarity with the lombok annotations for getters and setters.\n",
     "\n",
     "```java\n",
     "@RequestMapping(\"/api/queue\")\n",
