corrections and comments

--- a/_notebooks/Foundation/_tangibles/2024-11-08-spring_3_objectives.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-11-08-spring_3_objectives.ipynb
@@ -22,6 +22,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Other Sprint 3 Work\n",
+    "- [MCQ Corrections](https://trevorhuang1.github.io/csa_blog/2024/11/08/spring_3_objectives_IPYNB_2_.html)\n",
+    "- [Comments](https://github.com/trevorhuang1/csa_blog/issues/21)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## N@TM Quick Summary\n",
     "- Night at the Museum was fun! Many students and even parents showed interest in our bathroom pass project.\n",
     "- A handful of parents were software engineers, so we could explain the project in depth and what we did, such as the spring framework and many to many relationships in the database. \n",
