--- a/_notebooks/Foundation/_plans/2024-11-20-sprint_4_plans.ipynb
+++ b/_notebooks/Foundation/_plans/2024-11-20-sprint_4_plans.ipynb
@@ -9,11 +9,12 @@
    },
    "source": [
     "---\n",
-    "toc: False\n",
+    "toc: True\n",
     "comments: True\n",
     "layout: post\n",
     "title: Sprint 4 Plans/Agile Manifesto \n",
     "description: This will be my planning notebook for sprint 4. My emphasis will be integrating the bathroom pass with the analytics team while possibly merging the two different queue systems that Ian and I have.\n",
+    "type: issues\n",
     "courses: { csa: {week: 13} }\n",
     "---"
    ]
