--- a/_posts/2024-12-20-snake.md
+++ b/_posts/2024-12-20-snake.md
@@ -10,9 +10,9 @@ comments: false
 
 <style>
     body {
-        background: #2d5a27;
         margin: 0;
         font-family: Arial, sans-serif;
+        overflow: hidden;
     }
 
     .container {
@@ -37,15 +37,15 @@ comments: false
         gap: 5px;
     }
 
-    .apple-icon {
+    .seed-icon {
         width: 24px;
         height: 24px;
-        background: #ff6b6b;
+        background: #ffcb6b;
         border-radius: 50%;
         position: relative;
     }
 
-    .apple-icon::after {
+    .seed-icon::after {
         content: '';
         position: absolute;
         top: -4px;
@@ -59,26 +59,7 @@ comments: false
     canvas {
         border: 10px solid #1a4015;
         border-radius: 5px;
-        background-image: 
-            linear-gradient(45deg, #90ce7f 25%, transparent 25%),
-            linear-gradient(-45deg, #90ce7f 25%, transparent 25%),
-            linear-gradient(45deg, transparent 75%, #90ce7f 75%),
-            linear-gradient(-45deg, transparent 75%, #90ce7f 75%);
-        background-size: 40px 40px;
-        background-position: 0 0, 0 20px, 20px -20px, -20px 0px;
-        background-color: #9ed890;
-    }
-
-    .controls {
-        margin-top: 20px;
-        color: white;
-        text-align: center;
-    }
-
-    .level-info {
-        color: white;
-        margin: 10px 0;
-        font-size: 18px;
+        background-color: #7a7a7a;
     }
 
     .progress-bar {
@@ -102,7 +83,7 @@ comments: false
     <div class="container">
         <div class="game-header">
             <div class="score">
-                <div class="apple-icon"></div>
+                <div class="seed-icon"></div>
                 <span id="score">0</span>
             </div>
             <div class="level-info">Level: <span id="level">1</span></div>
@@ -111,9 +92,6 @@ comments: false
             <div class="progress-fill" id="progress"></div>
         </div>
         <canvas id="gameCanvas" width="500" height="500"></canvas>
-        <div class="controls">
-            <p>Use arrow keys to move • Collect seeds to restore nature</p>
-        </div>
     </div>
 </body>
 
@@ -131,26 +109,45 @@ comments: false
     ];
     let direction = 'right';
     let nextDirection = 'right';
-    let food = { x: 15, y: 15 };
+    let seed = { x: 15, y: 15 };
+    let obstacles = [];
+    let restoredAreas = [];
     let score = 0;
     let level = 1;
     let gameSpeed = 150;
     let gameLoop;
     let natureProgress = 0;
 
-    // Level configurations
-    const LEVELS = [
-        { required: 5, description: "Barren Meadow" },
-        { required: 10, description: "First Sprouts" },
-        { required: 15, description: "Growing Garden" },
-        { required: 20, description: "Blooming Field" },
-        { required: 25, description: "Nature's Paradise" }
-    ];
+    window.addEventListener("keydown", (e) => {
+        if(["ArrowUp", "ArrowDown", "ArrowLeft", "ArrowRight"].includes(e.key)) {
+            e.preventDefault();
+        }
+    });
+
+    function drawBackground() {
+        ctx.fillStyle = '#7a7a7a';
+        ctx.fillRect(0, 0, GAME_SIZE, GAME_SIZE);
+
+        restoredAreas.forEach(area => {
+            ctx.fillStyle = '#9ed890';
+            ctx.fillRect(
+                area.x * GRID_SIZE,
+                area.y * GRID_SIZE,
+                GRID_SIZE,
+                GRID_SIZE
+            );
+            
+            if (Math.random() < 0.33) {
+                drawFlower(area.x, area.y);
+            }
+        });
+    }
 
     function drawSnake() {
+        // Draw body
         snake.forEach((segment, index) => {
-            // Snake head
             if (index === 0) {
+                // Draw head
                 ctx.fillStyle = '#4a90e2';
                 ctx.beginPath();
                 ctx.arc(
@@ -162,17 +159,37 @@ comments: false
                 );
                 ctx.fill();
                 
-                // Eyes
+                // Draw eyes based on direction
                 ctx.fillStyle = 'white';
                 let eyeX = segment.x * GRID_SIZE + GRID_SIZE/2;
                 let eyeY = segment.y * GRID_SIZE + GRID_SIZE/2;
-                ctx.beginPath();
-                ctx.arc(eyeX + 3, eyeY - 3, 2, 0, 2 * Math.PI);
-                ctx.arc(eyeX + 3, eyeY + 3, 2, 0, 2 * Math.PI);
+                let eyeOffset = 3;
+                
+                switch(direction) {
+                    case 'right':
+                        ctx.beginPath();
+                        ctx.arc(eyeX + eyeOffset, eyeY - eyeOffset, 2, 0, 2 * Math.PI);
+                        ctx.arc(eyeX + eyeOffset, eyeY + eyeOffset, 2, 0, 2 * Math.PI);
+                        break;
+                    case 'left':
+                        ctx.beginPath();
+                        ctx.arc(eyeX - eyeOffset, eyeY - eyeOffset, 2, 0, 2 * Math.PI);
+                        ctx.arc(eyeX - eyeOffset, eyeY + eyeOffset, 2, 0, 2 * Math.PI);
+                        break;
+                    case 'up':
+                        ctx.beginPath();
+                        ctx.arc(eyeX - eyeOffset, eyeY - eyeOffset, 2, 0, 2 * Math.PI);
+                        ctx.arc(eyeX + eyeOffset, eyeY - eyeOffset, 2, 0, 2 * Math.PI);
+                        break;
+                    case 'down':
+                        ctx.beginPath();
+                        ctx.arc(eyeX - eyeOffset, eyeY + eyeOffset, 2, 0, 2 * Math.PI);
+                        ctx.arc(eyeX + eyeOffset, eyeY + eyeOffset, 2, 0, 2 * Math.PI);
+                        break;
+                }
                 ctx.fill();
             } else {
-                // Snake body
-                ctx.fillStyle = '#4a90e2';
+                ctx.fillStyle = '#6ca0dc';
                 ctx.fillRect(
                     segment.x * GRID_SIZE,
                     segment.y * GRID_SIZE,
@@ -183,118 +200,96 @@ comments: false
         });
     }
 
-    function drawFood() {
-        // Apple shape
-        ctx.fillStyle = '#ff6b6b';
+    function drawSeed() {
+        ctx.fillStyle = '#ffcb6b';
         ctx.beginPath();
         ctx.arc(
-            food.x * GRID_SIZE + GRID_SIZE/2,
-            food.y * GRID_SIZE + GRID_SIZE/2,
-            GRID_SIZE/2 - 2,
-            0,
-            2 * Math.PI
-        );
-        ctx.fill();
-
-        // Leaf
-        ctx.fillStyle = '#90ce7f';
-        ctx.beginPath();
-        ctx.ellipse(
-            food.x * GRID_SIZE + GRID_SIZE/2 + 2,
-            food.y * GRID_SIZE + 2,
-            4,
-            6,
-            Math.PI/4,
+            seed.x * GRID_SIZE + GRID_SIZE / 2,
+            seed.y * GRID_SIZE + GRID_SIZE / 2,
+            GRID_SIZE / 2 - 2,
             0,
             2 * Math.PI
         );
         ctx.fill();
     }
 
-    function updateNatureProgress() {
-        natureProgress = Math.min(100, (score / LEVELS[LEVELS.length-1].required) * 100);
-        document.getElementById('progress').style.width = natureProgress + '%';
-        
-        // Update level
-        let newLevel = 1;
-        for (let i = 0; i < LEVELS.length; i++) {
-            if (score >= LEVELS[i].required) {
-                newLevel = i + 2;
-            }
-        }
-        
-        if (newLevel !== level) {
-            level = newLevel;
-            document.getElementById('level').textContent = level;
-            gameSpeed = Math.max(70, 150 - (level - 1) * 15);
-            clearInterval(gameLoop);
-            gameLoop = setInterval(gameUpdate, gameSpeed);
-        }
-    }
-
-    function drawBackground() {
-        // Background is handled by CSS
-        ctx.clearRect(0, 0, GAME_SIZE, GAME_SIZE);
-        
-        // Draw nature elements based on progress
-        if (natureProgress > 20) {
-            // Draw scattered flowers
-            for (let i = 0; i < natureProgress/5; i++) {
-                let x = Math.random() * GAME_SIZE;
-                let y = Math.random() * GAME_SIZE;
-                if (!isOnSnake(x/GRID_SIZE, y/GRID_SIZE)) {
-                    drawFlower(x, y);
-                }
-            }
-        }
+    function drawObstacles() {
+        ctx.fillStyle = '#5a5a5a';
+        obstacles.forEach(obs => {
+            ctx.fillRect(
+                obs.x * GRID_SIZE,
+                obs.y * GRID_SIZE,
+                GRID_SIZE,
+                GRID_SIZE
+            );
+        });
     }
 
     function drawFlower(x, y) {
         const colors = ['#ff6b6b', '#ffd93d', '#6c5ce7', '#a8e6cf'];
         ctx.fillStyle = colors[Math.floor(Math.random() * colors.length)];
         ctx.beginPath();
-        for (let i = 0; i < 5; i++) {
-            const angle = (i * 2 * Math.PI) / 5;
-            const petalX = x + Math.cos(angle) * 5;
-            const petalY = y + Math.sin(angle) * 5;
-            ctx.arc(petalX, petalY, 3, 0, 2 * Math.PI);
-        }
-        ctx.fill();
-        
-        // Flower center
-        ctx.fillStyle = '#ffd93d';
-        ctx.beginPath();
-        ctx.arc(x, y, 2, 0, 2 * Math.PI);
+        ctx.arc(
+            x * GRID_SIZE + GRID_SIZE / 2,
+            y * GRID_SIZE + GRID_SIZE / 2,
+            GRID_SIZE / 3,
+            0,
+            2 * Math.PI
+        );
         ctx.fill();
     }
 
-    function isOnSnake(x, y) {
-        return snake.some(segment => {
-            const snakeX = segment.x * GRID_SIZE;
-            const snakeY = segment.y * GRID_SIZE;
-            return Math.abs(x*GRID_SIZE - snakeX) < GRID_SIZE && 
-                   Math.abs(y*GRID_SIZE - snakeY) < GRID_SIZE;
-        });
+    function restoreArea(centerX, centerY) {
+        for (let dx = -1; dx <= 1; dx++) {
+            for (let dy = -1; dy <= 1; dy++) {
+                const newX = centerX + dx;
+                const newY = centerY + dy;
+                
+                if (newX >= 0 && newX < GRID_COUNT && newY >= 0 && newY < GRID_COUNT) {
+                    if (!restoredAreas.some(area => area.x === newX && area.y === newY)) {
+                        restoredAreas.push({ x: newX, y: newY });
+                    }
+                }
+            }
+        }
+    }
+
+    function updateNatureProgress() {
+        natureProgress = Math.min(100, (restoredAreas.length / (GRID_COUNT * GRID_COUNT)) * 100);
+        document.getElementById('progress').style.width = natureProgress + '%';
+
+        let newLevel = Math.floor(score / 5) + 1;
+        if (newLevel !== level) {
+            level = newLevel;
+            document.getElementById('level').textContent = level;
+            gameSpeed = Math.max(70, 150 - (level - 1) * 15);
+            obstacles.push({ x: Math.floor(Math.random() * GRID_COUNT), y: Math.floor(Math.random() * GRID_COUNT) });
+            clearInterval(gameLoop);
+            gameLoop = setInterval(gameUpdate, gameSpeed);
+        }
     }
 
     function gameUpdate() {
         const head = { x: snake[0].x, y: snake[0].y };
         direction = nextDirection;
 
-        switch(direction) {
+        switch (direction) {
             case 'up': head.y--; break;
             case 'down': head.y++; break;
             case 'left': head.x--; break;
             case 'right': head.x++; break;
         }
 
-        // Wall collision
-        if (head.x < 0) head.x = GRID_COUNT - 1;
-        if (head.x >= GRID_COUNT) head.x = 0;
-        if (head.y < 0) head.y = GRID_COUNT - 1;
-        if (head.y >= GRID_COUNT) head.y = 0;
+        if (head.x < 0 || head.x >= GRID_COUNT || head.y < 0 || head.y >= GRID_COUNT) {
+            gameOver();
+            return;
+        }
 
-        // Self collision
+        if (obstacles.some(obs => obs.x === head.x && obs.y === head.y)) {
+            gameOver();
+            return;
+        }
+
         if (snake.some(segment => segment.x === head.x && segment.y === head.y)) {
             gameOver();
             return;
@@ -302,27 +297,31 @@ comments: false
 
         snake.unshift(head);
 
-        // Food collision
-        if (head.x === food.x && head.y === food.y) {
+        if (head.x === seed.x && head.y === seed.y) {
             score++;
             document.getElementById('score').textContent = score;
+            restoreArea(seed.x, seed.y);
             updateNatureProgress();
-            placeFood();
+            placeSeed();
         } else {
             snake.pop();
         }
 
-        // Draw game
+        ctx.clearRect(0, 0, GAME_SIZE, GAME_SIZE);
         drawBackground();
+        drawObstacles();
         drawSnake();
-        drawFood();
+        drawSeed();
     }
 
-    function placeFood() {
+    function placeSeed() {
         do {
-            food.x = Math.floor(Math.random() * GRID_COUNT);
-            food.y = Math.floor(Math.random() * GRID_COUNT);
-        } while (snake.some(segment => segment.x === food.x && segment.y === food.y));
+            seed.x = Math.floor(Math.random() * GRID_COUNT);
+            seed.y = Math.floor(Math.random() * GRID_COUNT);
+        } while (
+            snake.some(segment => segment.x === seed.x && segment.y === seed.y) ||
+            obstacles.some(obs => obs.x === seed.x && obs.y === seed.y)
+        );
     }
 
     function gameOver() {
@@ -343,10 +342,12 @@ comments: false
         level = 1;
         natureProgress = 0;
         gameSpeed = 150;
+        obstacles = [];
+        restoredAreas = [];
         document.getElementById('score').textContent = score;
         document.getElementById('level').textContent = level;
         document.getElementById('progress').style.width = '0%';
-        placeFood();
+        placeSeed();
         gameLoop = setInterval(gameUpdate, gameSpeed);
     }
 
@@ -367,6 +368,5 @@ comments: false
         }
     });
 
-    // Start game
     resetGame();
 </script>
