array lists homework

--- a/_notebooks/Homework/2025-01-09-recursion_hw.ipynb
+++ b/_notebooks/Homework/2025-01-09-recursion_hw.ipynb
@@ -273,6 +273,113 @@
     "\n",
     "The correct answer is B, since a base case is the condition that terminates recursion because returning a value allows for the problem to be solved by working backward. If there was no base case, there would be infinite recursions and it would lead to a stack overflow."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Result {\n",
+    "    public static String scoreTosses(int numPlayers, List<String> tosses) {\n",
+    "        Map<String, Integer> singleRings = new HashMap<>();\n",
+    "        singleRings.put(\"A\", 1);\n",
+    "        singleRings.put(\"R\", 1);\n",
+    "        singleRings.put(\"O\", 3);\n",
+    "        singleRings.put(\"G\", 3);\n",
+    "        singleRings.put(\"B\", 6);\n",
+    "\n",
+    "        Map<String, Integer> overlappingRings = new HashMap<>();\n",
+    "        overlappingRings.put(\"AO\", 5);\n",
+    "        overlappingRings.put(\"OA\", 5);\n",
+    "        overlappingRings.put(\"OB\", 10);\n",
+    "        overlappingRings.put(\"BO\", 10);\n",
+    "        overlappingRings.put(\"BG\", 10);\n",
+    "        overlappingRings.put(\"GB\", 10);\n",
+    "        overlappingRings.put(\"GR\", 5);\n",
+    "        overlappingRings.put(\"RG\", 5);\n",
+    "\n",
+    "        Map<String, Integer> bonus = new HashMap<>();\n",
+    "        bonus.put(\"+\", 2);\n",
+    "\n",
+    "        List<Map.Entry<Integer, int[]>> playerScores = new ArrayList<>();\n",
+    "\n",
+    "        for (int i = 0; i < numPlayers; i++) {\n",
+    "            int score = 0;\n",
+    "            int attempts = 0;\n",
+    "            for (String toss : tosses) {\n",
+    "                attempts++;\n",
+    "                for (String ring : toss.split(\"\")) {\n",
+    "                    if (singleRings.containsKey(ring)) {\n",
+    "                        score += singleRings.get(ring);\n",
+    "                    }\n",
+    "                    if (bonus.containsKey(ring)) {\n",
+    "                        score += bonus.get(ring);\n",
+    "                    }\n",
+    "                    if (overlappingRings.containsKey(ring)) {\n",
+    "                        score += overlappingRings.get(ring);\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "            playerScores.add(new AbstractMap.SimpleEntry<>(i + 1, new int[]{score, attempts}));\n",
+    "        }\n",
+    "\n",
+    "        // Sort by score descending, then by attempts ascending\n",
+    "        playerScores.sort((e1, e2) -> {\n",
+    "            int scoreComparison = Integer.compare(e2.getValue()[0], e1.getValue()[0]);\n",
+    "            if (scoreComparison != 0) {\n",
+    "                return scoreComparison;\n",
+    "            }\n",
+    "            return Integer.compare(e1.getValue()[1], e2.getValue()[1]);\n",
+    "        });\n",
+    "\n",
+    "        // Build the result string\n",
+    "        StringBuilder result = new StringBuilder();\n",
+    "        for (Map.Entry<Integer, int[]> entry : playerScores) {\n",
+    "            result.append(entry.getKey())\n",
+    "                  .append(\"-\")\n",
+    "                  .append(entry.getValue()[0])\n",
+    "                  ;\n",
+    "        }\n",
+    "\n",
+    "        return result.toString().trim();\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "public class ResultTest {\n",
+    "    public static void main(String[] args) {\n",
+    "        int numPlayers = 5;\n",
+    "        List<String> tosses = Arrays.asList(\n",
+    "            \"A\",\n",
+    "            \"R\",\n",
+    "            \"O+\",\n",
+    "            \"GB\",\n",
+    "            \"AO\",\n",
+    "            \"OBG\",\n",
+    "            \"RG+\"\n",
+    "        );\n",
+    "\n",
+    "        String outcome = Result.scoreTosses(numPlayers, tosses);\n",
+    "        System.out.println(\"Scores: \" + outcome);\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
