--- a/_notebooks/Homework/2025-01-18-array_lists.ipynb
+++ b/_notebooks/Homework/2025-01-18-array_lists.ipynb
@@ -31,7 +31,7 @@
     "// Part A\n",
     "public void cleanData(double lower, double upper) {\n",
     "    // Iterate backward to not skip elements\n",
-    "    for (int i = temperatures.size(); i < 0; i--) {\n",
+    "    for (int i = temperatures.size() - 1; i <= 0; i--) {\n",
     "        // Use get(i) to get the element at index i\n",
     "        // If it's outside of the acceptable range, remove it\n",
     "        if (temperatures.get(i) < lower || temperatures.get(i) > upper) {\n",
@@ -69,6 +69,14 @@
     "        }\n",
     "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Corrections\n",
+    "- It looks like I got 100% on my original attempt, so I'm going to keep my original code. I was glad that I remembered to iterate backward and got all the for loops correct."
    ]
   }
  ],
