i forgot to add header

--- a/_notebooks/Homework/2025-01-24-2D_arrays_pt2.ipynb
+++ b/_notebooks/Homework/2025-01-24-2D_arrays_pt2.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "layout: post\n",
+    "toc: True\n",
+    "title: 2D Arrays pt 2\n",
+    "description: My solution and thought process behind the 2022 FRQ problem 4\n",
+    "courses: {'csa': {'week': 18}}\n",
+    "type: collab\n",
+    "categories: [AP CSA]\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part A (notes to self):\n",
     "- Implement the repopulate method, which fills up a 2D array\n",
     "- Ranges from 1-MAX --> inclusive\n",
