im going to sleep

--- a/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
@@ -21,8 +21,8 @@
     "## 4-5 Things I Did:\n",
     "- Bathroom pass: created bathroom logging ([tinkle](https://github.com/nighthawkcoders/spring_2025/commit/e2f4e06fc5db15d3148f6ab54d4afd1923db16ce)) with a OneToOne relationship\n",
     "- Bathroom pass: This was scrapped, but I learned how to set up an [automated emailing system](https://github.com/nighthawkcoders/spring_2025/commit/da18e58be83efffe2e5f3c5abb0489b5c146671c) to bathroom approvalLinks with SpringBoot\n",
-    "- Analytics: Side quest assigned by Aadit. I made analytics for individual bathroom usage data on the frontend paired with Eric's grading data. Unfortunately, I changed the formatting for the times a while ago and forgot to change the analytics page, so some of this is broken (**5 minute fix**)\n",
-    "- Bathroom pass: "
+    "- Analytics: Side quest assigned by Aadit. I made [analytics](https://github.com/nighthawkcoders/portfolio_2025/commit/205a8873176313a419ded82ec8d8bc50490dc4d0) for individual bathroom usage data on the frontend paired with Eric's grading data. Unfortunately, I changed the formatting for the times a while ago and forgot to change the analytics page, so some of this is broken (**5 minute fix**)\n",
+    "- Bathroom pass: I made an [admin panel](https://github.com/nighthawkcoders/spring_2025/commit/ede322d90466983d222287f42e024d83b6bfbc6f#diff-d558f65322ee2d4b8b89cd24fd71e6453ed09c9e24e8619385b588164b71d841) with ThymeLeaf to show bathroom usage by person. It is functional and works well with scanner and digital bathroom pass, but as discussed with Mr. Mortensen, it still needs work. There are many parts that still need fine tuning to be actually useable for an administrator."
    ]
   },
   {
@@ -34,6 +34,36 @@
     "  - Scanner documentation\n",
     "  - Approval requests documentation\n",
     "  - UI documentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analytics!!\n",
+    "I've been doing my fair share, don't worry.\n",
+    "Spring_2025:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## N@TM\n",
+    "![Presenting :)](https://github.com/user-attachments/assets/b2ac4fd9-2ff7-4cf2-8f51-83c4e86c4666)\n",
+    "![Exploring with Ian and Jon](https://github.com/user-attachments/assets/9945fe5d-eb8f-4cbb-850e-bc16085eccaf)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Admin Panel Write Up:\n",
+    "- What does it do? The admin panel for bathroom pass (tinkle-view) allows for\n",
+    "- When can it be used? It works with both scanner and digital hallpass. For both it can add times, but people do not show up in the table unless they interact with the bathroom pass.\n",
+    "- Next steps forward (prior to N@TM):\n",
+    "  - UI needs to be friendlier. Admin should not need to click so many times to get between approving students and viewing times. Mr. Mortensen suggested putting approval_requests and tinkle-view on the same page, and I agree.\n",
+    "  - Backend shows that someone is in the bathroom, but doesn't say who. This should be shown so that admin can see."
    ]
   }
  ],
