--- a/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4-5 Things I Did:\n",
+    "## DOCSE: 4-5 Things I Did\n",
     "- Bathroom pass: created bathroom logging ([tinkle](https://github.com/nighthawkcoders/spring_2025/commit/e2f4e06fc5db15d3148f6ab54d4afd1923db16ce)) with a OneToOne relationship\n",
     "- Bathroom pass: This was scrapped, but I learned how to set up an [automated emailing system](https://github.com/nighthawkcoders/spring_2025/commit/da18e58be83efffe2e5f3c5abb0489b5c146671c) to bathroom approvalLinks with SpringBoot\n",
     "- Analytics: Side quest assigned by Aadit. I made [analytics](https://github.com/nighthawkcoders/portfolio_2025/commit/205a8873176313a419ded82ec8d8bc50490dc4d0) for individual bathroom usage data on the frontend paired with Eric's grading data. Unfortunately, I changed the formatting for the times a while ago and forgot to change the analytics page, so some of this is broken (**5 minute fix**)\n",
@@ -59,6 +59,7 @@
    "metadata": {},
    "source": [
     "## Admin Panel Write Up:\n",
+    "![DrawIO](https://github.com/user-attachments/assets/31b1e7d5-cafa-4a8b-89d0-966a9bdae937)\n",
     "- What does it do? The admin panel for bathroom pass (tinkle-view) allows for\n",
     "- When can it be used? It works with both scanner and digital hallpass. For both it can add times, but people do not show up in the table unless they interact with the bathroom pass.\n",
     "- Next steps forward (prior to N@TM):\n",
