--- a/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
@@ -38,25 +38,9 @@
     "- Here is a centralized place where most of the planning documents for bathroom pass were placed together: [Burndown list + all planning](https://github.com/CSA-Coders-2025/Planning-Repository-Issue-House-/issues/160)\n",
     "  - Scanner documentation\n",
     "  - Approval requests documentation\n",
-    "  - UI documentation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Analytics!!\n",
-    "I've been doing my fair share, don't worry.\n",
-    "Spring_2025:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## N@TM\n",
-    "![Presenting :)](https://github.com/user-attachments/assets/b2ac4fd9-2ff7-4cf2-8f51-83c4e86c4666)\n",
-    "![Exploring with Ian and Jon](https://github.com/user-attachments/assets/9945fe5d-eb8f-4cbb-850e-bc16085eccaf)\n"
+    "  - UI documentation\n",
+    "  \n",
+    "![Planning](https://github.com/user-attachments/assets/11c78ef6-37ce-4dad-895d-264ae0a85a77)"
    ]
   },
   {
@@ -65,11 +49,47 @@
    "source": [
     "## Admin Panel Write Up:\n",
     "![DrawIO](https://github.com/user-attachments/assets/e417ef90-d421-4340-a109-c11d4670c4e3)\n",
-    "- What does it do? The admin panel for bathroom pass (tinkle-view) allows for\n",
-    "- When can it be used? It works with both scanner and digital hallpass. For both it can add times, but people do not show up in the table unless they interact with the bathroom pass.\n",
-    "- Next steps forward (prior to N@TM):\n",
-    "  - UI needs to be friendlier. Admin should not need to click so many times to get between approving students and viewing times. Mr. Mortensen suggested putting approval_requests and tinkle-view on the same page, and I agree.\n",
-    "  - Backend shows that someone is in the bathroom, but doesn't say who. This should be shown so that admin can see."
+    "\n",
+    "The main point of this diagram is to show the relationships between scanner, digital bathroom pass, the database, and then my admin view.\n",
+    "\n",
+    "Breakdown:\n",
+    "1. Student can be added to queue from scanner OR digital bathroom pass. This adds to the queue DB table\n",
+    "2. Those in scanner can remove themselves from the queue if they please. The same applies for bathroom pass\n",
+    "- Split (scanner or bathroom pass):\n",
+    "    - Scanner: after user is finished, their time in/time out is added to the tinkle DB table\n",
+    "    - Bathroom pass: user can be either approved or denied. If approved, they will be redirected to a hallpass page that can be shown to security. After they are done, their time in/time out is also added to the tinkle DB table.\n",
+    "\n",
+    "**After the tinkle DB table has been updated, the tinkle-view page on the backend is updated with the new entry.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## N@TM\n",
+    "N@TM was a success! Bathroom pass was a very popular project, and many commented on how well digital bathroom pass, scanner, and admin view worked together. I received a lot of feedback, such as:\n",
+    "- Grows:\n",
+    "  - There is good integration between parts of our project. It is one coherent product\n",
+    "  - Features look professional\n",
+    "- Glows:\n",
+    "  - Readability of time in/time out entries needs to be improved\n",
+    "  - Increased accessability needed -- I should try putting the approve student and admin view on the same page\n",
+    "  - Leaderboard/sort by time or # of occurences to find suspicious activity easily.\n",
+    "\n",
+    "I learned a lot from this feedback and I'm ready to implement these changes ASAP (probably a bit after finals week).\n",
+    "\n",
+    "![Presenting :)](https://github.com/user-attachments/assets/b2ac4fd9-2ff7-4cf2-8f51-83c4e86c4666)\n",
+    "![Exploring with Ian and Jon](https://github.com/user-attachments/assets/9945fe5d-eb8f-4cbb-850e-bc16085eccaf)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I met a student named Alex who is a CSSE student with an awesome project!! I really liked the game and found the production quality similar to even CSA gamify projects.\n",
+    "\n",
+    "<img src=\"https://github.com/user-attachments/assets/e8ff57dc-4839-4800-af99-d79adb7a96ab\" alt=\"Alex #1\" width=\"300\"/>\n",
+    "<img src=\"https://github.com/user-attachments/assets/48300776-654d-41ae-b072-c4ffa4afc207\" alt=\"Alex #2\" width=\"300\"/>\n"
    ]
   }
  ],
